# arc

./: .env.example  .gitignore  AGENTS.md  ARC V0 워크플로우 정본.md  ARC_CANON.md  CLAUDE.md  PHASE_2_COMPLETION_REVIEW.md  PHASE_3_PILOT_CONTRACT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
arc/: __init__.py  __main__.py  artifacts.py  calibration.py  cli.py  contracts.py  episode.py  evidence_candidates.py  finalize.py  legacy.py  live_model.py  mock_model.py  outline.py  pilot.py  pilot_contracts.py  pipeline.py  pitches.py  production.py  project.py  prompts.py  prose.py  prose_probe.py  quota.py  rewrite.py  script.py  states.py  storage.py  usage.py  validation.py  workflow.py
docs/: ARC_V0_WORKFLOW.md
projects/kingdom_archive/: ARCHIVE_RULES.md  CONTINUITY_LEDGER.json  SERIES_STATE.json  WORLD_CORE.md  project.json
tests/: test_arc1_workflow.py  test_cli.py  test_evidence_candidates.py  test_key_pool.py  test_live_model.py  test_memory.py  test_operational_files.py  test_outline_import.py  test_parallel.py  test_phase3_offline.py  test_pilot.py  test_pilot_acceptance.py  test_pilot_live_runtime.py  test_pipeline.py  test_pitches.py  test_prose.py  test_prose_contract.py  test_prose_probe.py  test_resume.py  test_rewrite_import.py  test_routing_state.py  test_script_import.py  test_transition_contracts.py  test_usage.py  test_validation.py  test_wave_checkpoint.py  test_wave_resume.py  test_world_core.py
tests/fixtures/: live_synthetic_work.json  pilot_synthetic_work.json  synthetic_work.json  transitions.json
tests/fixtures/arc1/: archive_rules.md  (+9 more)
(+27 files in other folders)
