[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["google-genai==2.8.0", "python-dotenv>=1.0"]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
arc = "arc.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
